Colaboratory を使用して作成しました

--- a/haskell_lipovaca.ipynb
+++ b/haskell_lipovaca.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_lipovaca.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOOrLwooZ4SizEG+QZGXc4O",
+      "authorship_tag": "ABX9TyOhU7pS0yam95dN9XWW299g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -698,14 +698,15 @@
     {
       "cell_type": "code",
       "source": [
+        "# 文字列の連結は `++` を用いる\n",
         "!ghc -e '\"5\" ++ \"llama\"' #=> 5llama"
       ],
       "metadata": {
-        "id": "za-sZ6iCNqTm",
-        "outputId": "95faea70-0c7e-49de-e8d5-45f73ab2b161",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "za-sZ6iCNqTm",
+        "outputId": "95faea70-0c7e-49de-e8d5-45f73ab2b161"
       },
       "execution_count": 37,
       "outputs": [
@@ -719,6 +720,20 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Haskell のエラーは比較的親切\n",
+        "# `+` は両辺の引数が number でなければならない\n",
+        "# `==` は両辺のデータの型が同じで比較可能なこと\n",
+        "# 5 + 4.0 の場合は整数と浮動小数点数の足し算で浮動小数点数になる"
+      ],
+      "metadata": {
+        "id": "6SS5Y4CXN0Pl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# いまここ"
@@ -730,54 +745,19 @@
     {
       "cell_type": "code",
       "source": [
-        "# `+` は両辺の引数が number でなければならない\n",
-        "# "
+        "# `*` のように数字と数字の間に置かれて作用する関数を中沖関数 infix function と呼ぶ\n",
+        "# 他の殆どの関数は前置 prefix function である\n",
+        "# Haskell では前置関数の後にスペースを入れて引数を書く。括弧は要らない"
       ],
       "metadata": {
-        "id": "6SS5Y4CXN0Pl"
+        "id": "ieqlUnkiXLSx"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "8FV2Tkg9_66P"
-      },
-      "source": [
-        "Yikes! What GHC is telling us here is that `\"llama\"` is not a number and\n",
-        "so it doesn't know how to add it to 5. Even if it wasn't `\"llama\"` but\n",
-        "`\"four\"` or `\"4\"`, Haskell still wouldn't consider it to be a number. `+` \n",
-        "expects its left and right side to be numbers. If we tried to do `True == 5`,\n",
-        "GHC would tell us that the types don't match. Whereas [`+`](https://hackage.haskell.org/package/base/docs/Prelude.html#v:-43-) works only\n",
-        "on things that are considered numbers, [`==`](https://hackage.haskell.org/package/base/docs/Prelude.html#v:-61--61-) works on any two things that\n",
-        "can be compared. But the catch is that they both have to be the same\n",
-        "type of thing. You can't compare apples and oranges. We'll take a closer\n",
-        "look at types a bit later. Note: you can do `5 + 4.0` because `5` is sneaky\n",
-        "and can act like an integer or a floating-point number. `4.0` can't act\n",
-        "like an integer, so `5` is the one that has to adapt.\n",
-        "\n",
-        "<img src=\"https://github.com/kalz2q/mycolabnotebooks/blob/master/img/ringring.png?raw=1\" title=\"phoen\" style=\"float:right;margin-left:2em;\" /> \n",
-        "You may not have known it but we've been using functions now all along.\n",
-        "\n",
-        "For instance, [`*`](https://hackage.haskell.org/package/base/docs/Prelude.html#v:-42-) is a function that takes two numbers and multiplies\n",
-        "them. As you've seen, we call it by sandwiching it between them. This is\n",
-        "what we call an *infix* function. Most functions that aren't used with\n",
-        "numbers are *prefix* functions. Let's take a look at them.\n",
-        "\n",
-        "Functions are\n",
-        "usually prefix so from now on we won't explicitly state that a function\n",
-        "is of the prefix form, we'll just assume it. In most imperative\n",
-        "languages functions are called by writing the function name and then\n",
-        "writing its parameters in parentheses, usually separated by commas. In\n",
-        "Haskell, functions are called by writing the function name, a space and\n",
-        "then the parameters, separated by spaces. For a start, we'll try calling\n",
-        "one of the most boring functions in Haskell."
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "attributes": {
           "classes": [
@@ -787,12 +767,35 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "5jRmWm8c_66P"
+        "id": "5jRmWm8c_66P",
+        "outputId": "5dfdfe5c-ea70-49fc-f9d0-daca2bece919",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ],
       "source": [
-        "succ 8"
+        "!ghc -e 'succ 8'"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "XVOl6kC3YCtr"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
