Colaboratory を使用して作成しました

--- a/haskell_lipovaca.ipynb
+++ b/haskell_lipovaca.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_lipovaca.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP9/SNTvr6TlZoEpIH68WNZ",
+      "authorship_tag": "ABX9TyNH661uI4nHNim66lgqIXR7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -793,10 +793,10 @@
           "name": "\"code\""
         },
         "id": "IcPl9WGQ_66Q",
-        "outputId": "9f7bdfdb-7577-4694-dc4c-b4ff928018b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9f7bdfdb-7577-4694-dc4c-b4ff928018b8"
       },
       "outputs": [
         {
@@ -840,10 +840,10 @@
           "name": "\"code\""
         },
         "id": "vf5dGTbQ_66Q",
-        "outputId": "c86fd8f6-5712-4d01-a242-39bbe4430b15",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c86fd8f6-5712-4d01-a242-39bbe4430b15"
       },
       "outputs": [
         {
@@ -874,11 +874,11 @@
         "!ghc -e '92 `div` 10' #=> 9"
       ],
       "metadata": {
-        "id": "NI0PFae20L6C",
-        "outputId": "8d8199cf-3a3d-430b-cc92-73041af88345",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NI0PFae20L6C",
+        "outputId": "8d8199cf-3a3d-430b-cc92-73041af88345"
       },
       "execution_count": 7,
       "outputs": [
@@ -948,32 +948,33 @@
     {
       "cell_type": "code",
       "source": [
-        "!ghc -e 'doubleMe x = x + x; doubleMe 9'"
+        "# シェルワンライナーで Haskell で関数定義して使う\n",
+        "# シェルワンライナーで次のようには書けない\n",
+        "# !ghc -e 'doubleMe x = x + x; doubleMe 9'\n",
+        "# `let in` が使える\n",
+        "!ghc -e 'let doubleMe x = x + x in doubleMe 9'"
       ],
       "metadata": {
-        "id": "e1npC11e25eQ",
-        "outputId": "611a4c02-1aff-47a8-cbb6-de13a6bcf141",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e1npC11e25eQ",
+        "outputId": "ecd2628f-f166-412c-d6c8-c99926ef85c8"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n",
-            "<interactive>:0:21: error:\n",
-            "    Parse error: naked expression at top level\n",
-            "    Perhaps you intended to use TemplateHaskell\n"
+            "18\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "attributes": {
           "classes": [
@@ -983,30 +984,23 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "kCL9dBnZ_66R"
-      },
-      "outputs": [],
-      "source": [
-        "doubleMe 9"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "attributes": {
-          "classes": [
-            "haskell:",
-            "ghci"
-          ],
-          "id": "",
-          "name": "\"code\""
+        "id": "N9GDcZ-4_66R",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "N9GDcZ-4_66R"
+        "outputId": "7fb4096a-5718-4696-dc26-afbde03a9416"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "16.6\n"
+          ]
+        }
+      ],
       "source": [
-        "doubleMe 8.3"
+        "!ghc -e 'let doubleMe x = x + x in doubleMe 8.3'"
       ]
     },
     {
@@ -1037,7 +1031,8 @@
       },
       "outputs": [],
       "source": [
-        "doubleUs x y = x*2 + y*2"
+        "# 引数を 2つ取る関数\n",
+        "!ghc -e 'doubleUs x y = x*2 + y*2'"
       ]
     },
     {
@@ -1052,7 +1047,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "attributes": {
           "classes": [
@@ -1062,78 +1057,29 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "NoTI8pQe_66S"
-      },
-      "outputs": [],
-      "source": [
-        "doubleUs 4 9"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "attributes": {
-          "classes": [
-            "haskell:",
-            "ghci"
-          ],
-          "id": "",
-          "name": "\"code\""
+        "id": "NoTI8pQe_66S",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "MtCUpKVU_66S"
+        "outputId": "6f8d3995-e46e-4593-8d2f-5db536d93374"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "26\n",
+            "73.0\n",
+            "478\n",
+            "478\n"
+          ]
+        }
+      ],
       "source": [
-        "doubleUs 2.3 34.2"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "attributes": {
-          "classes": [
-            "haskell:",
-            "ghci"
-          ],
-          "id": "",
-          "name": "\"code\""
-        },
-        "id": "laPnlAUB_66S"
-      },
-      "outputs": [],
-      "source": [
-        "doubleUs 28 88 + doubleMe 123"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "5lJlCxBK_66S"
-      },
-      "source": [
-        "As expected, you can call your own functions from other functions that\n",
-        "you made. With that in mind, we could redefine `doubleUs` like this:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "attributes": {
-          "classes": [
-            "haskell:",
-            "hs"
-          ],
-          "id": "",
-          "name": "\"code\""
-        },
-        "id": "HB9-x3HE_66T"
-      },
-      "outputs": [],
-      "source": [
-        "doubleUs x y = doubleMe x + doubleMe y"
+        "!ghc -e 'let doubleUs x y = x*2 + y*2 in doubleUs 4 9'\n",
+        "!ghc -e 'let doubleUs x y = x*2 + y*2 in doubleUs 2.3 34.2'\n",
+        "!ghc -e 'let doubleMe x = x + x in let doubleUs x y = x*2 + y*2 in doubleUs 28 88 + doubleMe 123'\n",
+        "!ghc -e 'let doubleMe x = x + x in let doubleUs x y = doubleMe x + doubleMe y in doubleUs 28 88 + doubleMe 123'"
       ]
     },
     {
