Colaboratory を使用して作成しました

--- a/haskell_lipovaca.ipynb
+++ b/haskell_lipovaca.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_lipovaca.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMCfCknPKW9Tm8AIw+ehLIi",
+      "authorship_tag": "ABX9TyOvJoA9zJ4kM+gXohPcYo3D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "u8BK7s-v9R6o"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -62,10 +62,22 @@
         "!ghc -e 'putStrLn \"hello world!\"'"
       ],
       "metadata": {
-        "id": "eMR9fs65-M3I"
+        "id": "eMR9fs65-M3I",
+        "outputId": "24c0c135-dd7a-447c-8820-ff19281f9477",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -109,10 +121,39 @@
         "</table>"
       ],
       "metadata": {
-        "id": "WROVZMZ0Bl_8"
+        "id": "WROVZMZ0Bl_8",
+        "outputId": "c8031736-0b39-47c0-ec13-099f07dcb10d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 162
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<table border=\"1\">\n",
+              "<thead>\n",
+              "<tr><th>Keyboard Command </th><th> Action </th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td><kbd>Shift</kbd>+<kbd>Enter</kbd> </td><td> Run the selected Jupyter cell and advance to the next cell </td></tr>\n",
+              "<tr><td><kbd>Ctrl</kbd>+<kbd>Enter</kbd> </td><td> Run the selected Jupyter cell and don't advance </td></tr>\n",
+              "<tr><td><kbd>Alt</kbd>+<kbd>Enter</kbd> </td><td> Run the selected Jupyter cell and insert a new cell after </td></tr>\n",
+              "<tr><td><kbd>Enter</kbd> </td><td> Edit the selected Jupyter cell </td></tr>\n",
+              "<tr><td><kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>-</kbd> </td><td> Split the Jupyter cell at the cursor position</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -173,21 +214,9 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "FB31kju8_66I",
-        "outputId": "52bf2e06-2399-4489-ae35-ae8eccd6250e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "FB31kju8_66I"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "420\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!ghc -e '1892 - 1472'"
       ]
@@ -204,21 +233,9 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "gpx8ai_h_66I",
-        "outputId": "d71f352a-0659-4da6-8e96-b0f98f016172",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "gpx8ai_h_66I"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2.5\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!ghc -e '5 / 2' #=> 2.5 になる"
       ]
@@ -235,21 +252,9 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "Vc08RRfS_66J",
-        "outputId": "90378721-c806-43dc-a8ab-257c421ded56",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Vc08RRfS_66J"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!ghc -e '(50 * 100) - 4999'"
       ]
@@ -266,21 +271,9 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "JYSOYB-Z_66K",
-        "outputId": "a60acd98-d09b-4d37-cbef-cd91f9d8fb7e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "JYSOYB-Z_66K"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!ghc -e '50 * 100 - 4999'"
       ]
@@ -297,44 +290,18 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "r43BCjRU_66K",
-        "outputId": "34449c9d-164e-4022-d049-0d47f0e789f9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "r43BCjRU_66K"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "-244950\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!ghc -e '50 * (100 - 4999)'"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "KIl23s9__66L"
-      },
-      "source": [
-        "Doing\n",
-        "`5 * -3` will make GHC yell at you but doing `5 * (-3)` will work just\n",
-        "fine.\n",
-        "\n",
-        "Boolean algebra is also pretty straightforward. As you probably know, [`&&`](https://hackage.haskell.org/package/base/docs/Prelude.html#v:-38--38-)\n",
-        "means a boolean *and*, [`||`](https://hackage.haskell.org/package/base/docs/Prelude.html#v:-124--124-) means a boolean *or*. [`not`](https://hackage.haskell.org/package/base/docs/Prelude.html#v:not) negates a [`True`](https://hackage.haskell.org/package/base/docs/Prelude.html#v:True) or a\n",
-        "[`False`](https://hackage.haskell.org/package/base/docs/Prelude.html#v:False)."
       ]
     },
     {
       "cell_type": "code",
       "source": [
         "# 次のコードはエラーになる\n",
+        "# マイナス符号がついた数値は括弧で囲む必要がある\n",
         "%%script false\n",
         "!ghc -e '5 * -3'"
       ],
@@ -350,22 +317,10 @@
         "!ghc -e '3 == 4' #=> False と出力される"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xr0hY2zVD41y",
-        "outputId": "2f04e1fc-1c99-4051-a7b6-276597b64c11"
+        "id": "xr0hY2zVD41y"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "False\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -373,22 +328,10 @@
         "!ghc -e 'True || False' #=> True"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NuCc20DyEHud",
-        "outputId": "2fb0bbc2-6328-4101-e6d7-8f22d4edb848"
+        "id": "NuCc20DyEHud"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "True\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -396,22 +339,10 @@
         "!ghc -e 'False && False' #=> False"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lG4kjiaDElN0",
-        "outputId": "eddcfe4c-0cb1-4c05-f9a7-d3562ec86c13"
+        "id": "lG4kjiaDElN0"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "False\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -425,21 +356,9 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "iQhTGA5m_66L",
-        "outputId": "a250c519-fa52-4753-8666-f347759c4da1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "iQhTGA5m_66L"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "True\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!ghc -e 'True' #=> True"
       ]
@@ -468,21 +387,9 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "tgFzeSu3_66M",
-        "outputId": "121d88fb-238b-4459-b835-d19656420b3d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "tgFzeSu3_66M"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "True\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!ghc -e 'not False'"
       ]
@@ -499,21 +406,9 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "cZ4vOEBr_66M",
-        "outputId": "686f3eff-0611-40de-9aad-525019fac218",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "cZ4vOEBr_66M"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "False\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!ghc -e 'not (True && True)'"
       ]
@@ -530,21 +425,9 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "sp9IOGai_66N",
-        "outputId": "8197c2bb-6087-4c28-f699-fd2e2a98f14e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "sp9IOGai_66N"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "True\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!ghc -e '5 == 5'"
       ]
@@ -561,21 +444,9 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "y7qldU1y_66N",
-        "outputId": "38067405-a62e-44ce-c48c-7d6de4cf164b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "y7qldU1y_66N"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "False\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!ghc -e '1 == 0'"
       ]
@@ -592,21 +463,9 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "l1kHrjdD_66O",
-        "outputId": "0e099aef-8d29-4fe4-c9ca-a8e619b5fd62",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "l1kHrjdD_66O"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "False\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!ghc -e '5 /= 5' #=> False `/=` は not equal の意味"
       ]
@@ -623,21 +482,9 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "I58XZ1L2_66O",
-        "outputId": "d980c127-e396-454d-add8-f14de760a4da",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "I58XZ1L2_66O"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "True\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!ghc -e '5 /= 4'"
       ]
@@ -654,21 +501,9 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "_DCMlZk3_66O",
-        "outputId": "592b6b68-6f17-406f-86e3-541f96232dbb",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "_DCMlZk3_66O"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "True\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!ghc -e '\"hello\" == \"hello\"'"
       ]
@@ -702,22 +537,10 @@
         "!ghc -e '\"5\" ++ \"llama\"' #=> 5llama"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "za-sZ6iCNqTm",
-        "outputId": "95faea70-0c7e-49de-e8d5-45f73ab2b161"
+        "id": "za-sZ6iCNqTm"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\"5llama\"\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -758,22 +581,9 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "5jRmWm8c_66P",
-        "outputId": "a84bf3bf-df00-447e-ce1e-05eb62ba6b7b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "5jRmWm8c_66P"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "9\n",
-            "7\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# succ 関数は順序の定義された型を引数に取り次に来る値を返す\n",
         "!ghc -e 'succ 8'\n",
@@ -792,29 +602,24 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "IcPl9WGQ_66Q",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9f7bdfdb-7577-4694-dc4c-b4ff928018b8"
+        "id": "IcPl9WGQ_66Q"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "9\n",
-            "3.2\n",
-            "101\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# min , max 関数は引数をそれぞれ 2つ取る\n",
         "!ghc -e 'min 9 10'\n",
         "!ghc -e 'min 3.4 3.2'\n",
         "!ghc -e 'max 100 101'"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "QXi9nIl1HuuQ"
+      }
     },
     {
       "cell_type": "markdown",
@@ -839,24 +644,9 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "vf5dGTbQ_66Q",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c86fd8f6-5712-4d01-a242-39bbe4430b15"
+        "id": "vf5dGTbQ_66Q"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "16\n",
-            "16\n",
-            "\n",
-            "100\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# 関数の優先順位は高い\n",
         "!ghc -e 'succ 9 + max 5 4 + 1' #=> 16\n",
@@ -874,23 +664,10 @@
         "!ghc -e '92 `div` 10' #=> 9"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NI0PFae20L6C",
-        "outputId": "8d8199cf-3a3d-430b-cc92-73041af88345"
+        "id": "NI0PFae20L6C"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "9\n",
-            "9\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -943,22 +720,10 @@
         "!ghc -e 'let doubleMe x = x + x in doubleMe 9'"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "e1npC11e25eQ",
-        "outputId": "ecd2628f-f166-412c-d6c8-c99926ef85c8"
+        "id": "e1npC11e25eQ"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "18\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -972,21 +737,9 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "N9GDcZ-4_66R",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7fb4096a-5718-4696-dc26-afbde03a9416"
+        "id": "N9GDcZ-4_66R"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "16.6\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!ghc -e 'let doubleMe x = x + x in doubleMe 8.3'"
       ]
@@ -1023,24 +776,9 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "NoTI8pQe_66S",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6f8d3995-e46e-4593-8d2f-5db536d93374"
+        "id": "NoTI8pQe_66S"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "26\n",
-            "73.0\n",
-            "478\n",
-            "478\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!ghc -e 'let doubleUs x y = x*2 + y*2 in doubleUs 4 9'\n",
         "!ghc -e 'let doubleUs x y = x*2 + y*2 in doubleUs 2.3 34.2'\n",
@@ -1060,22 +798,10 @@
         "  putStrLin doubleUs 28 88 + doubleMe 123'"
       ],
       "metadata": {
-        "id": "AkM_UIdOKx9v",
-        "outputId": "2419fd0d-b273-419a-ab81-eff54353d613",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "AkM_UIdOKx9v"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting temp.hs\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1083,26 +809,10 @@
         "!runghc temp.hs"
       ],
       "metadata": {
-        "id": "U13OrHwsLW1N",
-        "outputId": "b1c30f74-faf8-4c10-8a05-6e0d1792c574",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "U13OrHwsLW1N"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "temp.hs:2:14: error:\n",
-            "    parse error on input ‘=’\n",
-            "    Perhaps you need a 'let' in a 'do' block?\n",
-            "    e.g. 'let x = 5' instead of 'x = 5'\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
