--- a/haskell_lipovaca.ipynb
+++ b/haskell_lipovaca.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_lipovaca.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOvJoA9zJ4kM+gXohPcYo3D",
+      "authorship_tag": "ABX9TyMG94GR/p9zhsIxrmsJXktF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,10 +63,10 @@
       ],
       "metadata": {
         "id": "eMR9fs65-M3I",
-        "outputId": "24c0c135-dd7a-447c-8820-ff19281f9477",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "24c0c135-dd7a-447c-8820-ff19281f9477"
       },
       "execution_count": 2,
       "outputs": [
@@ -122,11 +122,11 @@
       ],
       "metadata": {
         "id": "WROVZMZ0Bl_8",
-        "outputId": "c8031736-0b39-47c0-ec13-099f07dcb10d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 162
-        }
+        },
+        "outputId": "c8031736-0b39-47c0-ec13-099f07dcb10d"
       },
       "execution_count": 3,
       "outputs": [
@@ -613,28 +613,8 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "QXi9nIl1HuuQ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ryV6jom9_66Q"
-      },
-      "source": [
-        "Function application (calling a function by putting a space after it and\n",
-        "then typing out the parameters) has the highest precedence of them all.\n",
-        "What that means for us is that these two statements are equivalent."
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "attributes": {
           "classes": [
@@ -644,17 +624,42 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "vf5dGTbQ_66Q"
+        "id": "vf5dGTbQ_66Q",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7be7f5d1-da4e-41ab-a5c4-2d6d36b08b2c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "16\n",
+            "16\n",
+            "\n",
+            "100\n",
+            "91\n"
+          ]
+        }
+      ],
       "source": [
-        "# 関数の優先順位は高い\n",
+        "# 関数の優先順位が最も高い\n",
         "!ghc -e 'succ 9 + max 5 4 + 1' #=> 16\n",
         "!ghc -e '(succ 9) + (max 5 4) + 1' #=>16\n",
         "!echo\n",
         "!ghc -e 'succ 9 * 10' #=> 100\n",
         "!ghc -e 'succ (9 * 10)' #=>  91"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "QXi9nIl1HuuQ"
+      }
     },
     {
       "cell_type": "code",
@@ -717,36 +722,29 @@
         "# 次のようには書けない\n",
         "# !ghc -e 'doubleMe x = x + x; doubleMe 9'\n",
         "# `let in` が使える\n",
-        "!ghc -e 'let doubleMe x = x + x in doubleMe 9'"
+        "!ghc -e 'let doubleMe x = x + x in doubleMe 9' #=> 18"
       ],
       "metadata": {
-        "id": "e1npC11e25eQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "attributes": {
-          "classes": [
-            "haskell:",
-            "ghci"
-          ],
-          "id": "",
-          "name": "\"code\""
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "N9GDcZ-4_66R"
+        "id": "e1npC11e25eQ",
+        "outputId": "a198ee09-1fca-4308-cb74-9872048b9a89"
       },
-      "outputs": [],
-      "source": [
-        "!ghc -e 'let doubleMe x = x + x in doubleMe 8.3'"
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "18\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "attributes": {
           "classes": [
@@ -766,7 +764,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
         "attributes": {
           "classes": [
@@ -776,21 +774,36 @@
           "id": "",
           "name": "\"code\""
         },
-        "id": "NoTI8pQe_66S"
+        "id": "NoTI8pQe_66S",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a355dc2c-2679-4821-d27b-e559c7b646e2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "26\n",
+            "478\n",
+            "478\n",
+            "478\n"
+          ]
+        }
+      ],
       "source": [
         "!ghc -e 'let doubleUs x y = x*2 + y*2 in doubleUs 4 9'\n",
-        "!ghc -e 'let doubleUs x y = x*2 + y*2 in doubleUs 2.3 34.2'\n",
         "!ghc -e 'let doubleMe x = x + x in let doubleUs x y = x*2 + y*2 in doubleUs 28 88 + doubleMe 123'\n",
-        "!ghc -e 'let doubleMe x = x + x in let doubleUs x y = doubleMe x + doubleMe y in doubleUs 28 88 + doubleMe 123'"
+        "!ghc -e 'let doubleMe x = x + x in let doubleUs x y = doubleMe x + doubleMe y in doubleUs 28 88 + doubleMe 123'\n",
+        "# 定義が複数あるとき波括弧とセミコロンでまとめられる\n",
+        "!ghc -e 'let {doubleMe x = x + x; doubleUs x y = doubleMe x + doubleMe y} in doubleUs 28 88 + doubleMe 123'"
       ]
     },
     {
       "cell_type": "code",
       "source": [
         "# プログラムファイルを作って実行する\n",
-        "# 動かない 未解決\n",
         "%%writefile temp.hs\n",
         "main = \n",
         "  doubleMe x = x + x\n",
@@ -798,21 +811,75 @@
         "  putStrLin doubleUs 28 88 + doubleMe 123'"
       ],
       "metadata": {
-        "id": "AkM_UIdOKx9v"
+        "id": "AkM_UIdOKx9v",
+        "outputId": "e85af0d4-ff8f-46e5-e801-ff5bd9db9cd1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.hs\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "!runghc temp.hs"
+        "# 実験 プログラムファイルを作って実行する\n",
+        "%%writefile temp.hs\n",
+        "doubleMe x = x + x\n",
+        "doubleUs x y = doubleMe x + doubleMe y \n",
+        "main = \n",
+        "  print $ doubleUs 28 88 + doubleMe 123"
       ],
       "metadata": {
-        "id": "U13OrHwsLW1N"
+        "id": "UIADvhuZXUgB",
+        "outputId": "c1183481-e16d-4553-fb53-dc0ea37a0169",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.hs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!runghc temp.hs #=> 56+176+246 \n",
+        "!ghc -e '56+176+246'"
+      ],
+      "metadata": {
+        "id": "U13OrHwsLW1N",
+        "outputId": "40ea61cf-6be9-4042-94d2-aa12def7d8af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "478\n",
+            "478\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
