Colaboratory を使用して作成しました

--- a/haskell_lipovaca.ipynb
+++ b/haskell_lipovaca.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "haskell_lipovaca.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMG94GR/p9zhsIxrmsJXktF",
+      "authorship_tag": "ABX9TyMJtofu5eCRZvqY9M74ELPz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +52,7 @@
       "metadata": {
         "id": "u8BK7s-v9R6o"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -68,7 +67,7 @@
         },
         "outputId": "24c0c135-dd7a-447c-8820-ff19281f9477"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,14 +108,15 @@
         "%%html\n",
         "<table border=\"1\">\n",
         "<thead>\n",
-        "<tr><th>Keyboard Command </th><th> Action </th></tr>\n",
+        "<tr><th>キーボードショートカット </th><th> 作  用 </th></tr>\n",
         "</thead>\n",
         "<tbody>\n",
-        "<tr><td><kbd>Shift</kbd>+<kbd>Enter</kbd> </td><td> Run the selected Jupyter cell and advance to the next cell </td></tr>\n",
-        "<tr><td><kbd>Ctrl</kbd>+<kbd>Enter</kbd> </td><td> Run the selected Jupyter cell and don't advance </td></tr>\n",
-        "<tr><td><kbd>Alt</kbd>+<kbd>Enter</kbd> </td><td> Run the selected Jupyter cell and insert a new cell after </td></tr>\n",
-        "<tr><td><kbd>Enter</kbd> </td><td> Edit the selected Jupyter cell </td></tr>\n",
-        "<tr><td><kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>-</kbd> </td><td> Split the Jupyter cell at the cursor position</td></tr>\n",
+        "<tr><td>Shift+Enter </td><td> 実行して次のセルに移る </td></tr>\n",
+        "<tr><td>Ctrl+Enter </td><td> 実行してそのセルに留まる </td></tr>\n",
+        "<tr><td>Alt+Enter </td><td> 実行して次に新しいセルを作って移る </td></tr>\n",
+        "<tr><td>Enter </td><td> セルを編集する </td></tr>\n",
+        "<tr><td>Ctrl+Shift+Enter </td><td> 選択範囲を全て実行する </td></tr>\n",
+        "<tr><td>Ctrl+Shift+- </td><td> カーサーポジションでセルを分割する</td></tr>\n",
         "</tbody>\n",
         "</table>"
       ],
@@ -124,11 +124,11 @@
         "id": "WROVZMZ0Bl_8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 162
+          "height": 181
         },
-        "outputId": "c8031736-0b39-47c0-ec13-099f07dcb10d"
+        "outputId": "e0006102-40bb-40ed-8a37-b48bbaa1a7ec"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -139,14 +139,15 @@
             "text/html": [
               "<table border=\"1\">\n",
               "<thead>\n",
-              "<tr><th>Keyboard Command </th><th> Action </th></tr>\n",
+              "<tr><th>Keyboard Command </th><th> 作用 </th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "<tr><td><kbd>Shift</kbd>+<kbd>Enter</kbd> </td><td> Run the selected Jupyter cell and advance to the next cell </td></tr>\n",
-              "<tr><td><kbd>Ctrl</kbd>+<kbd>Enter</kbd> </td><td> Run the selected Jupyter cell and don't advance </td></tr>\n",
-              "<tr><td><kbd>Alt</kbd>+<kbd>Enter</kbd> </td><td> Run the selected Jupyter cell and insert a new cell after </td></tr>\n",
-              "<tr><td><kbd>Enter</kbd> </td><td> Edit the selected Jupyter cell </td></tr>\n",
-              "<tr><td><kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>-</kbd> </td><td> Split the Jupyter cell at the cursor position</td></tr>\n",
+              "<tr><td>Shift+Enter </td><td> 実行して次のセルに移る </td></tr>\n",
+              "<tr><td>Ctrl+Enter </td><td> 実行してそのセルに留まる </td></tr>\n",
+              "<tr><td>Alt+Enter </td><td> 実行して次に新しいセルを作って移る </td></tr>\n",
+              "<tr><td>Enter </td><td> セルを編集する </td></tr>\n",
+              "<tr><td>Ctrl+Shift+Enter </td><td> 選択範囲を全て実行する </td></tr>\n",
+              "<tr><td>Ctrl+Shift+- </td><td> カーサーポジションでセルを分割する</td></tr>\n",
               "</tbody>\n",
               "</table>"
             ]
@@ -614,7 +615,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "attributes": {
           "classes": [
@@ -731,7 +732,7 @@
         "id": "e1npC11e25eQ",
         "outputId": "a198ee09-1fca-4308-cb74-9872048b9a89"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -744,7 +745,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "attributes": {
           "classes": [
@@ -764,7 +765,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "attributes": {
           "classes": [
@@ -817,7 +818,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -845,7 +846,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -869,7 +870,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
